# info4-reseau-sockets

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build.yml  test.yml
client/: CMakeLists.txt  main.c  twiit_list.c  twiit_list.h
common/: CMakeLists.txt  codec.c  codec.h  constants.h
server/: CMakeLists.txt  database.c  database.h  init_db.sql  main.c  server.h  twiiiiiter_assert.h  user_list.c  user_list.h
tests/: Cargo.toml
tests/src/: lib.rs  network.rs  test_server.rs
